--- a/app/src/main/res/layouts/activities/registerActivity/layout/register_layout2.xml
+++ b/app/src/main/res/layouts/activities/registerActivity/layout/register_layout2.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.implementations.authentication.RegisterActivity">
+    tools:context=".activities.implementations.register.RegisterActivity">
 
     <Button
         android:id="@+id/registrationBack2"
@@ -51,7 +51,7 @@
                 android:text="@string/student_id" />
 
             <EditText
-                android:id="@+id/registerNumarMatricolEditText"
+                android:id="@+id/registerStudentIdEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -93,7 +93,7 @@
                 android:text="@string/father_initial" />
 
             <EditText
-                android:id="@+id/registerFatherEditText"
+                android:id="@+id/registerFatherInitialEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -162,7 +162,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="32dp"
-                android:onClick="tapRegistrationButton"
+                android:onClick="tapStudentCredentialsCheckButton"
                 android:text="@string/continue_step" />
 
         </LinearLayout>
