--- a/app/src/main/res/layouts/activities/registerActivity/layout/register_activity_layout.xml
+++ b/app/src/main/res/layouts/activities/registerActivity/layout/register_activity_layout.xml
@@ -9,7 +9,7 @@
         layout="@layout/register_layout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible" />
+        android:visibility="visible" />
 
     <include
         android:id="@+id/layoutRegister2"
