--- a/app/src/main/res/layouts/activities/registerActivity/layout/register_layout1.xml
+++ b/app/src/main/res/layouts/activities/registerActivity/layout/register_layout1.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activities.implementations.authentication.RegisterActivity">
+    tools:context=".activities.implementations.register.RegisterActivity">
 
     <Button
         android:id="@+id/registrationBack1"
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:onClick="tapRegistrationButton"
+        android:onClick="tapRegistrationAccountTypeButton"
         android:text="@string/student"
         app:layout_constraintBottom_toTopOf="@+id/buttonRegisterProfessor"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:onClick="tapRegistrationButton"
+        android:onClick="tapRegistrationAccountTypeButton"
         android:text="@string/administrator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/buttonRegisterProfessor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="tapRegistrationButton"
+        android:onClick="tapRegistrationAccountTypeButton"
         android:text="@string/professor"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
