--- a/modules/app/src/main/res/values/attrs.xml
+++ b/modules/app/src/main/res/values/attrs.xml
@@ -2,6 +2,12 @@
 <resources>
     <declare-styleable name="ScrollViewCategory">
         <attr name="category_title" format="string"/>
+        <attr name="generate_child_categories" format="string"/>
+        <attr name="show_base_header" format="boolean"/>
+        <attr name="permission_level" format="integer"/>
+    </declare-styleable>
+    <declare-styleable name="ScrollViewCategoryContent">
+        <attr name="category_title" format="string"/>
         <attr name="view_type" format="string"/>
         <attr name="show_empty" format="boolean"/>
         <attr name="generate_child_categories" format="string"/>
