--- a/modules/app/src/main/res/layouts/activities/otherActivityEntityActivity/layout/other_activity_entity_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/otherActivityEntityActivity/layout/other_activity_entity_activity_layout.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
             name="otherActivity"
-            type="com.lonn.studentassistant.viewModels.entities.OtherActivityViewModel"/>
+            type="com.lonn.studentassistant.viewModels.entities.OtherActivityViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -22,7 +24,7 @@
             android:text="@{otherActivity.activityName}"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/activityType"
@@ -30,9 +32,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:gravity="center"
             android:text="@{otherActivity.activityType}"
             android:textSize="18sp"
-            android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/activityTitle" />
 
         <TextView
@@ -40,9 +42,9 @@
             style="@style/DarkBlueTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@{otherActivity.activityYearSemester}"
             android:textSize="18sp"
-            android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/activityType" />
 
         <TextView
@@ -76,25 +78,26 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@id/activityWebSite"
             app:layout_constraintTop_toBottomOf="@id/activityWebSite">
+
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <com.lonn.studentassistant.views.implementations.categories.professorCategories.ProfessorBaseCategory
                     android:id="@+id/professorsBaseCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:category_title="Professors"
-                    app:view_type="partial"/>
+                    app:view_type="PARTIAL" />
 
                 <com.lonn.studentassistant.views.implementations.categories.scheduleCategories.ScheduleBaseCategory
                     android:id="@+id/scheduleBaseCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:category_title="Schedule"
-                    app:view_type="partial"
-                    app:generate_child_categories="days"/>
+                    app:subcategories_to_generate="days"
+                    app:view_type="PARTIAL" />
 
             </LinearLayout>
         </ScrollView>
