--- a/modules/app/src/main/res/layouts/activities/professorEntityActivity/layout/professor_entity_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/professorEntityActivity/layout/professor_entity_activity_layout.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
             name="professor"
-            type="com.lonn.studentassistant.viewModels.entities.ProfessorViewModel"/>
+            type="com.lonn.studentassistant.viewModels.entities.ProfessorViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -93,35 +95,36 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@id/professorCabinet"
             app:layout_constraintTop_toBottomOf="@id/professorCabinet">
-                <LinearLayout
-                    android:orientation="vertical"
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseBaseCategory
+                    android:id="@+id/coursesBaseCategory"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    app:category_title="Courses">
 
-                    <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseBaseCategory
-                        android:id="@+id/coursesBaseCategory"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:category_title="Courses">
+                </com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseBaseCategory>
 
-                    </com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseBaseCategory>
+                <com.lonn.studentassistant.views.implementations.categories.otherActivityCategories.OtherActivityBaseCategory
+                    android:id="@+id/otherActivitiesBaseCategory"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:category_title="Other activities"
+                    app:view_type="PARTIAL" />
 
-                    <com.lonn.studentassistant.views.implementations.categories.otherActivityCategories.OtherActivityBaseCategory
-                        android:id="@+id/otherActivitiesBaseCategory"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:category_title="Other activities"
-                        app:view_type="partial"/>
+                <com.lonn.studentassistant.views.implementations.categories.scheduleCategories.ScheduleBaseCategory
+                    android:id="@+id/scheduleBaseCategory"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:category_title="Schedule"
+                    app:subcategories_to_generate="days"
+                    app:view_type="PARTIAL" />
 
-                    <com.lonn.studentassistant.views.implementations.categories.scheduleCategories.ScheduleBaseCategory
-                        android:id="@+id/scheduleBaseCategory"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:category_title="Schedule"
-                        app:view_type="partial"
-                        app:generate_child_categories="days"/>
-
-                </LinearLayout>
+            </LinearLayout>
         </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
