--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_courses_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_courses_layout.xml
@@ -1,93 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:bind="http://schemas.android.com/tools">
 
-    <TextView
-        style="@style/DarkBlueTitle"
-        android:id="@+id/titleCoursesLayout"
-        android:layout_marginTop="16dp"
+    <data>
+
+        <import type="com.lonn.studentassistant.firebaselayer.entities.Course" />
+
+        <import type="com.lonn.studentassistant.views.EntityViewType" />
+
+        <variable
+            name="courses"
+            type="java.util.List&lt;Course&gt;" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Courses"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_height="match_parent">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/titleCoursesLayout"
-        app:layout_constraintTop_toBottomOf="@id/titleCoursesLayout">
-
-        <LinearLayout
-            android:orientation="vertical"
+        <TextView
+            android:id="@+id/titleCoursesLayout"
+            style="@style/DarkBlueTitle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Courses"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseBaseCategory
-                android:id="@+id/coursesBaseCategory"
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="@id/titleCoursesLayout"
+            app:layout_constraintTop_toBottomOf="@id/titleCoursesLayout">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:category_title="Courses"
-                app:view_type="full"
-                app:show_base_header="false">
+                android:orientation="vertical">
 
-                <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseYearCategory
+                <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseBaseCategory
+                    android:id="@+id/coursesBaseCategory"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:category_title="First year"
-                    app:view_type="partial">
+                    android:layout_height="wrap_content">
 
-                    <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseSemesterCategory
+                    <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseYearCategory
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:category_title="First semester"/>
-                    <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseSemesterCategory
+                        android:layout_height="wrap_content">
+
+                        <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseSemesterCategory
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+                        <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseSemesterCategory
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+                    </com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseYearCategory>
+
+                    <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseYearCategory
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:category_title="Second semester"/>
+                        android:layout_height="wrap_content">
 
-                </com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseYearCategory>
+                        <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseSemesterCategory
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
 
-                <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseYearCategory
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:category_title="Second year">
+                        <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseSemesterCategory
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
 
-                    <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseSemesterCategory
+                    </com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseYearCategory>
+
+                    <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseYearCategory
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:category_title="First semester"/>
-                    <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseSemesterCategory
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:category_title="Second semester"/>
+                        android:layout_height="wrap_content">
 
-                </com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseYearCategory>
+                        <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseSemesterCategory
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
 
-                <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseYearCategory
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:category_title="Third year">
+                        <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseSemesterCategory
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:category_title="@{`Second semester`}"
+                            app:show_empty="@{true}"
+                            app:show_header="@{true}"
+                            app:view_type="@{`FULL`}" />
+                    </com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseYearCategory>
+                </com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseBaseCategory>
 
-                    <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseSemesterCategory
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:category_title="First semester"/>
-                    <com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseSemesterCategory
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:category_title="Second semester"/>
-
-                </com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseYearCategory>
-
-            </com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseBaseCategory>
-
-        </LinearLayout>
-    </ScrollView>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+        </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
