--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_profile_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_profile_layout.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="student"
-            type="com.lonn.studentassistant.viewModels.entities.StudentViewModel"/>
+            type="com.lonn.studentassistant.viewModels.entities.StudentViewModel" />
     </data>
 
     <ScrollView
@@ -18,64 +21,64 @@
             <ImageView
                 android:id="@+id/profileImage"
                 android:layout_width="match_parent"
-                android:layout_marginTop="16dp"
                 android:layout_height="125dp"
+                android:layout_marginTop="16dp"
+                android:contentDescription="Student image"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@{student.studentImage}"
-                android:contentDescription="Student image"/>
+                app:srcCompat="@{student.studentImage}" />
 
             <TextView
-                style="@style/DarkBlueSubtitle"
                 android:id="@+id/titleProfileLayout"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                style="@style/DarkBlueSubtitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{student.lastName + ` ` + student.firstName}"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:gravity="center"
-                app:layout_constraintTop_toBottomOf="@id/profileImage"/>
+                android:text="@{student.lastName + ` ` + student.firstName}"
+                app:layout_constraintTop_toBottomOf="@id/profileImage" />
 
             <LinearLayout
                 android:id="@+id/profileEmailLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/titleProfileLayout"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:gravity="center"
-                android:weightSum="1">
+                android:weightSum="1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/titleProfileLayout">
 
                 <TextView
                     style="@style/DarkBlueTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Email: "
                     android:layout_weight="0.3"
-                    android:gravity="end|center"/>
+                    android:gravity="end|center"
+                    android:text="Email: " />
 
                 <EditText
-                    style="@style/DarkBlueTextView"
                     android:id="@+id/profileEmailEditText"
+                    style="@style/DarkBlueTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
                     android:layout_weight="0.5"
                     android:enabled="false"
-                    android:text="@{student.email}"/>
+                    android:inputType="textEmailAddress"
+                    android:text="@{student.email}" />
 
                 <ImageView
                     android:id="@+id/profileEmailEditButton"
                     android:layout_width="@dimen/dim_0dp"
                     android:layout_height="20dp"
                     android:layout_weight="0.1"
-                    app:srcCompat="@drawable/ic_edit"/>
+                    app:srcCompat="@drawable/ic_edit" />
 
                 <ImageView
                     android:id="@+id/profileEmailCancelButton"
                     android:layout_width="@dimen/dim_0dp"
                     android:layout_height="20dp"
                     android:layout_weight="0.1"
-                    app:srcCompat="@drawable/ic_cancel"
-                    android:visibility="invisible"/>
+                    android:visibility="invisible"
+                    app:srcCompat="@drawable/ic_cancel" />
 
             </LinearLayout>
 
@@ -83,43 +86,43 @@
                 android:id="@+id/profilePhoneLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/profileEmailLayout"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:gravity="center"
-                android:weightSum="1">
+                android:weightSum="1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/profileEmailLayout">
 
                 <TextView
                     style="@style/DarkBlueTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Phone number: "
                     android:layout_weight="0.3"
-                    android:gravity="end|center"/>
+                    android:gravity="end|center"
+                    android:text="Phone number: " />
 
                 <EditText
-                    style="@style/DarkBlueTextView"
                     android:id="@+id/profilePhoneEditText"
+                    style="@style/DarkBlueTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:inputType="phone"
                     android:layout_weight="0.5"
                     android:enabled="false"
-                    android:text="@{student.phoneNumber}"/>
+                    android:inputType="phone"
+                    android:text="@{student.phoneNumber}" />
 
                 <ImageView
                     android:id="@+id/profilePhoneEditButton"
                     android:layout_width="@dimen/dim_0dp"
                     android:layout_height="20dp"
                     android:layout_weight="0.1"
-                    app:srcCompat="@drawable/ic_edit"/>
+                    app:srcCompat="@drawable/ic_edit" />
 
                 <ImageView
                     android:id="@+id/profilePhoneCancelButton"
                     android:layout_width="@dimen/dim_0dp"
                     android:layout_height="20dp"
                     android:layout_weight="0.1"
-                    app:srcCompat="@drawable/ic_cancel"
-                    android:visibility="invisible"/>
+                    android:visibility="invisible"
+                    app:srcCompat="@drawable/ic_cancel" />
 
             </LinearLayout>
 
@@ -127,43 +130,43 @@
                 android:id="@+id/profileYearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/profilePhoneLayout"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:gravity="center"
-                android:weightSum="1">
+                android:weightSum="1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/profilePhoneLayout">
 
                 <TextView
                     style="@style/DarkBlueTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Year: "
                     android:layout_weight="0.3"
-                    android:gravity="end|center"/>
+                    android:gravity="end|center"
+                    android:text="Year: " />
 
                 <EditText
-                    style="@style/DarkBlueTextView"
                     android:id="@+id/profileGroupEditText"
+                    style="@style/DarkBlueTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
                     android:layout_weight="0.5"
                     android:enabled="false"
-                    android:text="@{Integer.toString(student.year)}"/>
+                    android:inputType="textEmailAddress"
+                    android:text="@{Integer.toString(student.year)}" />
 
                 <ImageView
                     android:id="@+id/profileYearEditButton"
                     android:layout_width="@dimen/dim_0dp"
                     android:layout_height="20dp"
                     android:layout_weight="0.1"
-                    app:srcCompat="@drawable/ic_edit"/>
+                    app:srcCompat="@drawable/ic_edit" />
 
                 <ImageView
                     android:id="@+id/profileYearCancelButton"
                     android:layout_width="@dimen/dim_0dp"
                     android:layout_height="20dp"
                     android:layout_weight="0.1"
-                    app:srcCompat="@drawable/ic_cancel"
-                    android:visibility="invisible"/>
+                    android:visibility="invisible"
+                    app:srcCompat="@drawable/ic_cancel" />
 
             </LinearLayout>
 
@@ -171,52 +174,52 @@
                 android:id="@+id/profileGroupLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/profileYearLayout"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:gravity="center"
-                android:weightSum="1">
+                android:weightSum="1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/profileYearLayout">
 
                 <TextView
-                    style="@style/DarkBlueTextView"
                     android:id="@+id/profileEmailTextView"
+                    style="@style/DarkBlueTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Group: "
                     android:layout_weight="0.3"
-                    android:gravity="end|center"/>
+                    android:gravity="end|center"
+                    android:text="Group: " />
 
                 <EditText
-                    style="@style/DarkBlueTextView"
                     android:id="@+id/profileYearEditText"
+                    style="@style/DarkBlueTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
                     android:layout_weight="0.5"
                     android:enabled="false"
-                    android:text="@{student.group}"/>
+                    android:inputType="textEmailAddress"
+                    android:text="@{student.group}" />
 
                 <ImageView
                     android:id="@+id/profileGroupEditButton"
                     android:layout_width="@dimen/dim_0dp"
                     android:layout_height="20dp"
                     android:layout_weight="0.1"
-                    app:srcCompat="@drawable/ic_edit"/>
+                    app:srcCompat="@drawable/ic_edit" />
 
                 <ImageView
                     android:id="@+id/profileGroupCancelButton"
                     android:layout_width="@dimen/dim_0dp"
                     android:layout_height="20dp"
                     android:layout_weight="0.1"
-                    app:srcCompat="@drawable/ic_cancel"
-                    android:visibility="invisible"/>
+                    android:visibility="invisible"
+                    app:srcCompat="@drawable/ic_cancel" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:orientation="vertical"
                 app:layout_constraintLeft_toLeftOf="@id/titleProfileLayout"
                 app:layout_constraintTop_toBottomOf="@id/profileGroupLayout">
 
@@ -226,7 +229,7 @@
                     android:layout_height="wrap_content"
                     app:category_title="My optional courses"
                     app:permission_level="1"
-                    app:show_empty="true"/>
+                    app:show_empty="true" />
 
                 <com.lonn.studentassistant.views.implementations.categories.otherActivityCategories.OtherActivityEnrolledCategory
                     android:id="@+id/otherActivitiesProfileCategory"
@@ -234,7 +237,7 @@
                     android:layout_height="wrap_content"
                     app:category_title="My other activities"
                     app:permission_level="1"
-                    app:show_empty="true"/>
+                    app:show_empty="true" />
 
             </LinearLayout>
 
