--- a/modules/app/src/main/res/values/attrs.xml
+++ b/modules/app/src/main/res/values/attrs.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="ScrollViewCategory">
-        <attr name="category_title" format="string"/>
-        <attr name="generate_child_categories" format="string"/>
-        <attr name="show_base_header" format="boolean"/>
-        <attr name="permission_level" format="integer"/>
+        <attr name="category_title" format="string" />
+        <attr name="entity_name" format="string" />
+        <attr name="subcategories_to_generate" format="string" />
+        <attr name="show_header" format="boolean" />
+        <attr name="view_type" format="string" />
+        <attr name="show_empty" format="boolean" />
+        <attr name="permission_level" format="integer" />
+        <attr name="should_contain" format="string" />
     </declare-styleable>
-    <declare-styleable name="ScrollViewCategoryContent">
-        <attr name="category_title" format="string"/>
-        <attr name="view_type" format="string"/>
-        <attr name="show_empty" format="boolean"/>
-        <attr name="generate_child_categories" format="string"/>
-        <attr name="show_base_header" format="boolean"/>
-        <attr name="permission_level" format="integer"/>
+
+    <declare-styleable name="CourseYearCategory">
+        <attr name="year" format="integer" />
+    </declare-styleable>
+
+    <declare-styleable name="CourseSemesterCategory">
+        <attr name="semester" format="integer" />
     </declare-styleable>
 </resources>
